@@ -107,6 +107,7 @@ Date: 2024-08-09
     - Revamped the intermediates tab structure, to make it not a botched mess.
     - Changed Vinyl bromide PMMA plastic to take 20 methyl methacrylate instead of 25.
     - Changed all module lights glass input from 6 to 16.
+    - Changed the first air filter recipe to take 4 nickel plates instead of 2 iron plates.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
